# omniforce-engine

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake_build.bat  utils.cmake
Cursed Engine/: CMakeLists.txt
Cursed Engine/src/: CursedEngine.h
Cursed Engine/src/Core/: Application.cpp  Application.h  EntryPoint.h  Subsystem.h  Utils.h
Cursed Engine/src/Foundation/: Macros.h  Types.h
Cursed Engine/src/Log/: Logger.cpp  Logger.h
Cursed Engine/src/Memory/: Allocator.h  Pointers.hpp
Cursed Engine/src/Renderer/: DeviceBuffer.h  DeviceCmdBuffer.h  ForwardDecl.h  GraphicsContext.h  Image.h  Renderer.h  RendererAPI.h  RendererCommon.h  Swapchain.h
Cursed Engine/src/Threading/: ConditionalLock.h  JobSystem.cpp  JobSystem.h
Editor/: CMakeLists.txt  config.json  imgui.ini
Editor/Resources/4/: Lights.glslh  PBRCommon.glslh  PipelineLocal.glslh
Editor/Resources/SandboxProject/: Sandbox.omni
Editor/Resources/Shaders/: ClusterDebugView.ofs  Common.glslh  CullIndirect.ofs  PBR.ofs  SWMicropolyRaster.ofs  Transform.glslh  VirtualGeometryUtils.glslh  Wireframe.ofs
Editor/Resources/shaders/: AABB.glslh  CameraData.glslh  GBufferOpaque.ofs  MeshCompression.glslh  MeshData.glslh  PBR.ofs  PBRCommon.glslh  Transform.glslh  VisibilityBuffer.ofs  VisibilityBufferHelpers.glslh  VisibleMaterialResolve.ofs  bitstream.glslh  camera_data.glslh  cluster_debug_view.ofs  common.glslh  compute_clear.ofs  constants.glslh  cull_indirect.ofs  frustum.glslh  indirect_params_generation.ofs  lights.glslh  mesh_data.glslh  mesh_quantization.glslh  render_object.glslh  sphere.glslh  sprite.ofs  sw_raster_micropoly.ofs  task_payload.glslh  texture.glslh  uber_main.ofs  uber_main_bug.ofs  virtual_geometry_utils.glslh  vis_buffer.ofs  vis_buffer_helpers.glslh  vis_material_resolve.ofs  visibility_resolve.glslh  wireframe.ofs
Editor/Source/: EditorCamera.cpp  EditorCamera.h  EditorLogsSinks.h  EditorSubsystem.cpp  EditorUtils.h
Editor/Source/EditorPanels/: ContentBrowser.h  Logs.h  PathTracingSettings.h  Properties.h
Editor/src/: EditorCamera.cpp  EditorCamera.h  EditorLogsSinks.h  EditorSubsystem.cpp  EditorUtils.h  PanelManager.cpp  PanelManager.h  tinyfiledialogs.h
Editor/src/EditorPanels/: Assets.h  ContentBrowser.h  EditorPanel.h  Logs.h  Properties.h  SceneHierarchy.h
Omniforce/: CMakeLists.txt
Omniforce/Shaders/: BSDF.slang  Common.slang  Compression.slang  FullScreenBase.slang  GlobalParameters.slang  InlineRayTracing.slang  Lighting.slang  MIS.slang  NextEventEstimation.slang  PBRLighting.slang  Packing.slang  PathTracing.slang  PathTracingCommon.slang  Random.slang  Rendering.slang  Sampler.slang  SamplingStrategy.slang  SpriteRendering.slang  ToneMapping.slang  VisibilityRendering.slang  VisibleMaterialResolve.slang  slangdconfig.json  test.slang
Omniforce/Shaders/Shared/: CameraData.glslh  Lights.glslh  MeshData.glslh  Texture.glslh  Transform.glslh
Omniforce/Shaders/Slang/: Test.slang
Omniforce/Shaders/Source/: AABB.glslh  ClusterDebugView.ofs  Common.glslh  ComputeClear.ofs  Constants.glslh  GBufferOpaque.ofs  MeshCompression.glslh  PBR.ofs  PCGHash.glslh  Sphere.glslh  Sprite.ofs  TaskPayload.glslh  Texture.glslh  VisibleMaterialResolve.ofs
Omniforce/Source/: Omniforce.h
Omniforce/Source/Asset/: AssetBase.h  AssetCompressor.h  AssetFile.h  AssetManager.h  AssetType.h  Material.h  MeshPreprocessor.h  Model.h  OFRController.h  PrimitiveMeshGenerator.h  VertexQuantizer.h  VirtualMeshBuilder.h
Omniforce/Source/Audio/: AudioEngine.h  AudioSource.h  AudioSourceFlags.h
Omniforce/Source/Core/: Application.cpp  Application.h  Array.h  BitStream.h  CallbackRHUMap.h  EngineConfig.h  EntryPoint.h  KDTree.h  ObjectLifetimeManager.h  RandomNumberGenerator.h  RuntimeExecutionContext.h  Serializable.h  Subsystem.h  UUID.cpp  UUID.h  Utils.h
Omniforce/Source/DebugUtils/: DebugRenderer.h
Omniforce/Source/Filesystem/: File.h  Filesystem.h
Omniforce/Source/Foundation/: Array.h  Assert.h  BasicTypes.h  Common.h  Platform.h  RandomNumberGenerator.h  Stack.h  Timer.h  Types.h  UUID.cpp  UUID.h
Omniforce/Source/Log/: Logger.cpp  Logger.h
Omniforce/Source/Memory/: Allocator.h  MemoryAllocation.h  Pointers.h  Pointers.hpp
Omniforce/Source/Physics/: PhysicsEngine.h  PhysicsMaterial.h  PhysicsSettings.h
Omniforce/Source/RHI/: AccelerationStructure.h  DescriptorSet.h  DeviceBuffer.h  DeviceBufferLayout.h  DeviceCmdBuffer.h  GraphicsContext.h  Image.h  Pipeline.h  PipelineBarrier.h  RHICommon.h  RTPipeline.h  Renderer.h  RendererAPI.h  Shader.h  ShaderBindingTable.h  ShaderCompiler.h  ShaderLibrary.h  Swapchain.h
Omniforce/Source/Renderer/: AccelerationStructure.h  DescriptorSet.h  DeviceBuffer.h  DeviceBufferLayout.h  DeviceCmdBuffer.h  ForwardDecl.h  GraphicsContext.h  Image.h  Mesh.h  Meshlet.h  Pipeline.h  PipelineBarrier.h  PipelineStage.h  RTPipeline.h  Renderer.h  RendererAPI.h  RendererCommon.h  Shader.h  ShaderBindingTable.h  ShaderCompiler.h  ShaderLibrary.h  Swapchain.h
Omniforce/Source/Rendering/: DeviceIndexedResourceBuffer.h  ISceneRenderer.h  Mesh.h  PipelineLibrary.h  SceneRendererPrimitives.h
Omniforce/Source/Scene/: Camera.h  Component.h  DeviceIndexedResourceBuffer.h  DeviceMaterialPool.h  Entity.h  ForwardDecl.h  ISceneRenderer.h  Lights.h  PathTracingSceneRenderer.h  PipelineLibrary.h  RasterSceneRenderer.h  Scene.h  SceneCommon.h  SceneRenderer.h  SceneRendererPrimitives.h  Sprite.h
Omniforce/Source/Scripting/: MonoForwardDecl.h  PendingCallbackInfo.h  RuntimeScriptInstance.h  ScriptClass.h  ScriptEngine.h
Omniforce/Source/Threading/: ConditionalLock.h  JobSystem.h
Omniforce/src/: CursedEngine.h  Omniforce.h  cursed_pch.cpp
Runtime/: config.json  (+1 more)
Sandbox/: CMakeLists.txt
Sandbox/Source/: RootSystem.cpp
Sandbox/src/: RootSystem.cpp
ScriptEngine/: CMakeLists.txt
ScriptEngine/Source/: Debug.cs  EngineAPI.cs  Input.cs  Physics.cs
ScriptEngine/src/: Components.cs  Debug.cs  EngineAPI.cs  GameObject.cs  Input.cs  Math.cs  Quat.cs  UUID.cs  Vector.cs
Tools/MetaTool/: CMakeLists.txt  README.md
(+449 files in other folders)
