set(SCRIPT_ENGINE_TARGET ScriptEngine CACHE INTERNAL "")

file(GLOB_RECURSE SCRIPT_ENGINE_FILES
	"src/*.cs"
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SCRIPT_ENGINE_FILES})

project(${SCRIPT_ENGINE_TARGET} VERSION 0.1.0 LANGUAGES CSharp)

add_library(${SCRIPT_ENGINE_TARGET} SHARED ${SCRIPT_ENGINE_FILES})
set_property(TARGET ${SCRIPT_ENGINE_TARGET} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.7.2")

set_target_properties(${SCRIPT_ENGINE_TARGET} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Editor/Resources/scripting/bin"
)

target_compile_options(${SCRIPT_ENGINE_TARGET} PRIVATE "/langversion:8")

omni_set_project_ide_folder(${SCRIPT_ENGINE_TARGET} ${CMAKE_CURRENT_SOURCE_DIR})