file(GLOB_RECURSE MY_FILES
	"src/*.cs"
)

set(SCRIPT_PROJECT ScriptProject)

project(${SCRIPT_PROJECT} VERSION 1.0 LANGUAGES CSharp)

add_library(${SCRIPT_PROJECT} SHARED ${MY_FILES})
set_property(TARGET ${SCRIPT_PROJECT} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.7.2")

set_target_properties(${SCRIPT_PROJECT} PROPERTIES
    VS_DOTNET_REFERENCES "${VS_DOTNET_REFERENCES}"
    VS_DOTNET_REFERENCE_ScriptEngine "${CMAKE_SOURCE_DIR}/assemblies/ScriptEngine.dll"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/assemblies"
    OUTPUT_NAME "gamescripts"
)
target_compile_options(${SCRIPT_PROJECT} PRIVATE "/langversion:8")